# st-autotools

./: .clang-format  Makefile.am  README.md  about.c  autogen.sh  configure.ac  enable_debug.m4  gera-opcao.sh  run.sh
src/: Makefile.am  config.def.h  st.h  x.c
